--- a/package.json
+++ b/package.json
@@ -1,28 +1,42 @@
 {
   "name": "4-blog",
   "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "start": "nodemon ./bin/www"
-  },
+  "description": "",
+  "main": "app.js",
   "dependencies": {
-    "body-parser": "~1.13.2",
-    "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
-    "express": "~4.13.1",
-    "jade": "~1.11.0",
-    "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0",
-    "mongodb": "*",
-    "mongoose": "*",
-    "connect-flash": "*",
-    "express-validator": "*",
-    "express-session": "*",
-    "express-messages": "*",
-    "passport": "*",
-    "passport-local": "*",
-    "passport-http": "*",
-    "multer": "*",
-    "moment": "*"
-  }
+    "body-parser": "^1.13.3",
+    "bcrypt": "^0.8.5",
+    "cookie-parser": "^1.3.5",
+    "connect-flash": "^0.1.1",
+    "express": "^4.13.3",
+    "jade": "^1.11.0",
+    "debug": "^2.2.0",
+    "moment": "^2.10.6",
+    "express-messages": "^1.0.0",
+    "mongoose": "^4.1.9",
+    "multer": "^1.0.6",
+    "express-session": "^1.11.3",
+    "morgan": "^1.6.1",
+    "mongodb": "^2.0.45",
+    "express-validator": "^2.17.1",
+    "passport": "^0.3.0",
+    "passport-local": "^1.0.0",
+    "passport-http": "^0.3.0",
+    "serve-favicon": "^2.3.0"
+  },
+  "devDependencies": {},
+  "scripts": {
+    "start": "nodemon ./bin/www",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Jackwzp/simpleblog.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Jackwzp/simpleblog/issues"
+  },
+  "homepage": "https://github.com/Jackwzp/simpleblog#readme"
 }
