add helper for updating slug path easily in one place

--- a/package.json
+++ b/package.json
@@ -4,30 +4,32 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
-    "body-parser": "^1.13.3",
     "bcrypt": "^0.8.5",
-    "cookie-parser": "^1.3.5",
+    "body-parser": "^1.13.3",
     "connect-flash": "^0.1.1",
-    "express": "^4.13.3",
-    "jade": "^1.11.0",
+    "cookie-parser": "^1.3.5",
     "debug": "^2.2.0",
-    "moment": "^2.10.6",
+    "express": "^4.13.3",
     "express-messages": "^1.0.0",
-    "mongoose": "^4.1.9",
-    "multer": "^1.0.6",
     "express-session": "^1.11.3",
-    "morgan": "^1.6.1",
-    "mongodb": "^2.0.45",
     "express-validator": "^2.17.1",
+    "jade": "^1.11.0",
+    "jasmine-node": "^1.14.5",
+    "moment": "^2.10.6",
+    "mongodb": "^2.0.45",
+    "mongoose": "^4.1.9",
+    "morgan": "^1.6.1",
+    "multer": "^1.0.6",
     "passport": "^0.3.0",
-    "passport-local": "^1.0.0",
     "passport-http": "^0.3.0",
+    "passport-local": "^1.0.0",
+    "request": "^2.65.0",
     "serve-favicon": "^2.3.0"
   },
   "devDependencies": {},
   "scripts": {
     "start": "nodemon ./bin/www",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/.bin/jasmine-node spec"
   },
   "repository": {
     "type": "git",
